first portfolio draft

--- a/about.html
+++ b/about.html
@@ -26,8 +26,11 @@
     </nav>
 
     <div class="content">
-        <p>Your About Banner</p>
-        <p>Any message you want to put.</p>
+        <p>My name is Jayden</p>
+        <p>Hobbies I have are...</p>
+      <li>Reading</li> <li> videogames</li> <li>poetry</li> <li>coding</li> <li>writing</li> <li>music</li> <li>walking</li>
+      <img src=IMG_3168.jpeg> </img>
+       <img src=IMG_0290.jpeg> </img>                        
     </div>
     <br>
     <br>
