--- a/projects.html
+++ b/projects.html
@@ -32,12 +32,12 @@
      </nav>
 
     <div class="content">
-        <p>Your Projects Banner</p>
-        <p>Any message you want to put.</p>
+        <p>these are the projects ive done</p>
+        <a href="https://popcode.org/?snapshot=1da3f696-54d1-4c50-ba0d-c17d0e1b410f">Photogram project</a>
+      <p><a href="https://popcode.org/?snapshot=33a767e4-72a5-4c0b-937c-0bfd9749c891"> whack a mole project</a> </p>
     </div>
     <br>
     <br>
-
 
   </body>
 
