--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
      </nav>
 
     <div class="content">
-        <p>Your Hompage Banner</p>
-        <p>Any message you want to put.</p>
+        <p>Hello.</p>
+        <p>next page</p>
     </div>
     <br>
     <br>
